@@ -1,5 +1,10 @@
 2003-11-29  Fred Kiefer <FredKiefer@gmx.de>
 
+	* Source/NSWindow.m (+initialize) cache runloop modes. 
+	(-_handleWindowNeedsDisplay:) and (-orderWindow:relativeTo:) use cached modes.
+
+2003-11-29  Fred Kiefer <FredKiefer@gmx.de>
+
 	* Source/NSCell.m (-setTitleWithMnemonic:) use [setTitle:] instead
 	of [setStringValue:].
 	(-mnemonic) use [title] instead of [stringValue].
